--- a/create_index_ tables.ipynb
+++ b/create_index_ tables.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,8 +21,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tables = pd.read_csv('articlesDataset/cleanDataTables', delimiter=',', header=None)"
+    "tables = pd.read_csv('dataset/cleanDataTables2', delimiter=',', header=None)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -35,7 +42,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([10029, 'timeline evolutionary history life', 'archean eon',\n",
+       "       'archean eon', 'date event',\n",
+       "       'formation greenstone belt acasta gneisses great slave region canada oldest rock belt world late heavy bombardment extended barrage impact event upon inner planets meteoroids thermal flux widespread hydrothermal activity lhb may conducive life emergence early diversification cells resembling prokaryote appear these first organisms chemoautotrophs use carbon dioxide carbon source oxidize inorganic materials extract energy later prokaryotes evolve glycolysis set chemical reactions free energy organic molecules glucose store chemical bonds atp glycolysis atp continue used almost organisms unchanged day formation greenstone belt isua complex western greenland region whose rocks show isotope frequency suggestive presence life lifetime last universal ancestor split bacteria archaea occurs bacteria develop primitive forms photosynthesis first produce oxygen these organisms generate atp exploiting proton gradient mechanism still used virtually organisms photosynthesizing cyanobacteria evolve use water reducing agent thereby producing oxygen waste product the oxygen initially oxidizes dissolved iron oceans creating iron ore the oxygen concentration atmosphere slowly rises acting poison many bacteria the moon still close earth causes tide feet high the earth continually wracked hurricane force winds these extreme mixing influences thought stimulate evolutionary processes see oxygen catastrophe life land likely developed time',\n",
+       "       'timeline evolutionary history life archean eon archean eon date event formation greenstone belt acasta gneisses great slave region canada oldest rock belt world late heavy bombardment extended barrage impact event upon inner planets meteoroids thermal flux widespread hydrothermal activity lhb may conducive life emergence early diversification cells resembling prokaryote appear these first organisms chemoautotrophs use carbon dioxide carbon source oxidize inorganic materials extract energy later prokaryotes evolve glycolysis set chemical reactions free energy organic molecules glucose store chemical bonds atp glycolysis atp continue used almost organisms unchanged day formation greenstone belt isua complex western greenland region whose rocks show isotope frequency suggestive presence life lifetime last universal ancestor split bacteria archaea occurs bacteria develop primitive forms photosynthesis first produce oxygen these organisms generate atp exploiting proton gradient mechanism still used virtually organisms photosynthesizing cyanobacteria evolve use water reducing agent thereby producing oxygen waste product the oxygen initially oxidizes dissolved iron oceans creating iron ore the oxygen concentration atmosphere slowly rises acting poison many bacteria the moon still close earth causes tide feet high the earth continually wracked hurricane force winds these extreme mixing influences thought stimulate evolutionary processes see oxygen catastrophe life land likely developed time'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "formattedTables[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +107,7 @@
        "{'acknowledged': True}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,14 +118,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 298793/298793 [01:56<00:00, 2572.95it/s]\n"
+      "100%|██████████| 298793/298793 [01:49<00:00, 2733.04it/s]\n"
      ]
     },
     {
@@ -103,7 +134,7 @@
        "(298793, [])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
