--- a/data_analysis/article_analysis1.ipynb
+++ b/data_analysis/article_analysis1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,16 +15,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "raw_articles = pd.read_csv('../articlesDataset/articlesPlusTitle', delimiter=',', header=None)"
+    "raw_articles = pd.read_csv('../dataset/articlesPlusTitle', delimiter=',', header=None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -50,20 +50,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 202253/202253 [16:09<00:00, 208.61it/s]\n"
+      "100%|██████████| 202253/202253 [10:18<00:00, 338.23it/s]\n"
      ]
     }
    ],
    "source": [
     "title_lenght = []\n",
     "text_lenght = []\n",
+    "catch_all_lenght = []\n",
     "\n",
     "tknzr = TweetTokenizer()\n",
     "\n",
@@ -71,12 +72,15 @@
     "    \n",
     "    title = str(articles[1])\n",
     "    text = str(articles[2])\n",
+    "    catch_all = title+\" \"+text\n",
     "    \n",
     "    lenght_title = len(tknzr.tokenize(title))\n",
     "    lenght_text = len(tknzr.tokenize(text))\n",
+    "    lenght_catch_all = len(tknzr.tokenize(catch_all))\n",
     "    \n",
     "    title_lenght.append(lenght_title)\n",
-    "    text_lenght.append(lenght_text)"
+    "    text_lenght.append(lenght_text)\n",
+    "    catch_all_lenght.append(lenght_catch_all)"
    ]
   },
   {
@@ -90,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -137,12 +141,13 @@
     "plt.xlabel('total of words')\n",
     "plt.ylabel('total of articles (log)')\n",
     "plt.yscale('log')\n",
+    "plt.savefig('article_title1.pdf')\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -164,6 +169,7 @@
     "plt.xlabel('total of words')\n",
     "plt.ylabel('total of articles (log)')\n",
     "plt.yscale('log')\n",
+    "plt.savefig('article_title2.pdf')\n",
     "plt.show()"
    ]
   },
@@ -226,6 +232,40 @@
     "plt.ylabel('total of articles (log)')\n",
     "plt.yscale('log')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Article Catch All Analysis\n",
+    "\n",
+    "In the next code blocks we analyze the number of words in the article catch all"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "catch all analysis:\n",
+      "max words = 124678\n",
+      "min words = 2\n",
+      "avg words = 940.8718881796561\n",
+      "std words = 1221.136029806829\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('catch all analysis:')\n",
+    "print(\"max words = \"+str(np.max(catch_all_lenght)))\n",
+    "print(\"min words = \"+str(np.min(catch_all_lenght)))\n",
+    "print(\"avg words = \"+str(np.mean(catch_all_lenght)))\n",
+    "print(\"std words = \"+str(np.std(catch_all_lenght)))"
    ]
   }
  ],
