--- a/data_analysis/table_analysis.ipynb
+++ b/data_analysis/table_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,16 +15,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "raw_tables = pd.read_csv('../articlesDataset/cleanDataTables', delimiter=',', header=None)"
+    "raw_tables = pd.read_csv('../dataset/cleanDataTables', delimiter=',', header=None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -50,14 +50,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 298793/298793 [04:32<00:00, 1098.11it/s]\n"
+      "100%|██████████| 298793/298793 [03:36<00:00, 1378.43it/s]\n"
      ]
     }
    ],
@@ -67,6 +67,7 @@
     "caption_lenght = []\n",
     "header_lenght = []\n",
     "body_lenght = []\n",
+    "catch_all_leght = []\n",
     "\n",
     "\n",
     "tknzr = TweetTokenizer()\n",
@@ -78,18 +79,21 @@
     "    caption = str(tables[3])   \n",
     "    header = str(tables[4])   \n",
     "    body = str(tables[5])\n",
+    "    catch_all = title +\" \"+section_title+\" \"+caption+\" \"+header+\"\"+body\n",
     "    \n",
     "    lenght_title = len(tknzr.tokenize(title))\n",
     "    lenght_section_title = len(tknzr.tokenize(section_title))\n",
     "    lenght_caption = len(tknzr.tokenize(caption))\n",
     "    lenght_header = len(tknzr.tokenize(header))\n",
     "    lenght_body = len(tknzr.tokenize(body))\n",
+    "    lenght_catch_all = len(tknzr.tokenize(catch_all))\n",
     "    \n",
     "    title_lenght.append(lenght_title)\n",
     "    section_title_lenght.append(lenght_section_title)\n",
     "    caption_lenght.append(lenght_caption)\n",
     "    header_lenght.append(lenght_header)\n",
-    "    body_lenght.append(lenght_body)"
+    "    body_lenght.append(lenght_body)\n",
+    "    catch_all_leght.append(lenght_catch_all)"
    ]
   },
   {
@@ -103,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -150,6 +154,7 @@
     "plt.xlabel('total of words')\n",
     "plt.ylabel('total of articles (log)')\n",
     "plt.yscale('log')\n",
+    "plt.savefig('table_title2.pdf')\n",
     "plt.show()"
    ]
   },
@@ -395,6 +400,40 @@
     "plt.ylabel('total of articles (log)')\n",
     "plt.yscale('log')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Table Catch All Analysis\n",
+    "\n",
+    "In the next code blocks we analyze the number of words in the table catch all"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "catch all analysis:\n",
+      "max words = 102886\n",
+      "min words = 4\n",
+      "avg words = 229.25350326145525\n",
+      "std words = 1000.806808093378\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('catch all analysis:')\n",
+    "print(\"max words = \"+str(np.max(catch_all_leght)))\n",
+    "print(\"min words = \"+str(np.min(catch_all_leght)))\n",
+    "print(\"avg words = \"+str(np.mean(catch_all_leght)))\n",
+    "print(\"std words = \"+str(np.std(catch_all_leght)))"
    ]
   }
  ],
