--- a/siamese_network_LSTM.ipynb
+++ b/siamese_network_LSTM.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "read_file = pd.read_csv('dataset/trainDataset', delimiter=',', header=None)\n",
+    "read_file = pd.read_csv('dataset/trainDataset1_1', delimiter=',', header=None)\n",
     "train_dataset = read_file.iloc[:,:].values"
    ]
   },
@@ -33,29 +33,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "read_file = pd.read_csv('dataset/validationDataset', delimiter=',', header=None)\n",
+    "read_file = pd.read_csv('dataset/validationDataset1_1', delimiter=',', header=None)\n",
     "validation_dataset = read_file.iloc[:,:].values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "read_file = pd.read_csv('dataset/testDataset', delimiter=',', header=None)\n",
+    "read_file = pd.read_csv('dataset/testDataset1_1', delimiter=',', header=None)\n",
     "test_dataset = read_file.iloc[:,:].values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "def sequence_padding(X_DIM, value):\n",
     "    \n",
-    "    value_padding = np.pad(value, ((0,12 - X_DIM),(0,0)), 'constant')\n",
+    "    value_padding = np.pad(value, ((0,15 - X_DIM),(0,0)), 'constant')\n",
     "    \n",
     "    return value_padding"
    ]
@@ -63,6 +63,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,9 +109,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 112191/112191 [01:09<00:00, 1611.32it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "left_train = []\n",
     "rigth_train = []\n",
@@ -114,7 +129,7 @@
     "    \n",
     "    value1 = tknzr.tokenize(str(articleTitle))\n",
     "    \n",
-    "    if len(value1) < 12:\n",
+    "    if len(value1) < 15:\n",
     "        \n",
     "        embedding1 = embedding_model.wv[value1]\n",
     "        padding_embedding1 = sequence_padding(embedding1.shape[0],embedding1)\n",
@@ -122,13 +137,13 @@
     "    \n",
     "    else:\n",
     "        \n",
-    "        embedding1 = embedding_model.wv[value1[0:12]]\n",
+    "        embedding1 = embedding_model.wv[value1[0:15]]\n",
     "        left_train.append(embedding1)\n",
     "    \n",
     "    \n",
     "    value2 = tknzr.tokenize(str(tableTitle))\n",
     "    \n",
-    "    if len(value2) < 12:\n",
+    "    if len(value2) < 15:\n",
     "        \n",
     "        embedding2 = embedding_model.wv[value2]\n",
     "        padding_embedding2 = sequence_padding(embedding2.shape[0],embedding2)\n",
@@ -136,7 +151,7 @@
     "    \n",
     "    else:\n",
     "        \n",
-    "        embedding2 = embedding_model.wv[value2[0:12]]\n",
+    "        embedding2 = embedding_model.wv[value2[0:15]]\n",
     "        rigth_train.append(embedding2)\n",
     "    \n",
     "    \n",
@@ -145,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,9 +178,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 6626/6626 [00:04<00:00, 1629.91it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "left_validation = []\n",
     "rigth_validation = []\n",
@@ -175,7 +198,7 @@
     "    \n",
     "    value1 = tknzr.tokenize(str(articleTitle))\n",
     "    \n",
-    "    if len(value1) < 12:\n",
+    "    if len(value1) < 15:\n",
     "        \n",
     "        embedding1 = embedding_model.wv[value1]\n",
     "        padding_embedding1 = sequence_padding(embedding1.shape[0],embedding1)\n",
@@ -183,13 +206,13 @@
     "    \n",
     "    else:\n",
     "        \n",
-    "        embedding1 = embedding_model.wv[value1[0:12]]\n",
+    "        embedding1 = embedding_model.wv[value1[0:15]]\n",
     "        left_validation.append(embedding1)\n",
     "    \n",
     "    \n",
     "    value2 = tknzr.tokenize(str(tableTitle))\n",
     "    \n",
-    "    if len(value2) < 12:\n",
+    "    if len(value2) < 15:\n",
     "        \n",
     "        embedding2 = embedding_model.wv[value2]\n",
     "        padding_embedding2 = sequence_padding(embedding2.shape[0],embedding2)\n",
@@ -197,7 +220,7 @@
     "    \n",
     "    else:\n",
     "        \n",
-    "        embedding2 = embedding_model.wv[value2[0:12]]\n",
+    "        embedding2 = embedding_model.wv[value2[0:15]]\n",
     "        rigth_validation.append(embedding2)\n",
     "    \n",
     "    \n",
@@ -206,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,9 +247,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 13227/13227 [00:08<00:00, 1600.14it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "left_test = []\n",
     "rigth_test = []\n",
@@ -236,7 +267,7 @@
     "    \n",
     "    value1 = tknzr.tokenize(str(articleTitle))\n",
     "    \n",
-    "    if len(value1) < 12:\n",
+    "    if len(value1) < 15:\n",
     "        \n",
     "        embedding1 = embedding_model.wv[value1]\n",
     "        padding_embedding1 = sequence_padding(embedding1.shape[0],embedding1)\n",
@@ -244,13 +275,13 @@
     "    \n",
     "    else:\n",
     "        \n",
-    "        embedding1 = embedding_model.wv[value1[0:12]]\n",
+    "        embedding1 = embedding_model.wv[value1[0:15]]\n",
     "        left_test.append(embedding1)\n",
     "    \n",
     "    \n",
     "    value2 = tknzr.tokenize(str(tableTitle))\n",
     "    \n",
-    "    if len(value2) < 12:\n",
+    "    if len(value2) < 15:\n",
     "        \n",
     "        embedding2 = embedding_model.wv[value2]\n",
     "        padding_embedding2 = sequence_padding(embedding2.shape[0],embedding2)\n",
@@ -258,7 +289,7 @@
     "    \n",
     "    else:\n",
     "        \n",
-    "        embedding2 = embedding_model.wv[value2[0:12]]\n",
+    "        embedding2 = embedding_model.wv[value2[0:15]]\n",
     "        rigth_test.append(embedding2)\n",
     "    \n",
     "    \n",
@@ -267,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,24 +327,23 @@
     "    \n",
     "    model = tf.keras.Sequential()\n",
     "    \n",
-    "    model.add(tf.keras.layers.LSTM(16, activation='relu',  dropout=0.2, input_shape=input_shape, return_sequences=True))\n",
-    "    model.add(tf.keras.layers.BatchNormalization())\n",
-    "    model.add(tf.keras.layers.LSTM(32, activation='relu',  dropout=0.2, return_sequences=True))\n",
-    "    model.add(tf.keras.layers.BatchNormalization())\n",
-    "    model.add(tf.keras.layers.LSTM(64, activation='relu',  dropout=0.2, return_sequences=True))\n",
-    "    model.add(tf.keras.layers.BatchNormalization())\n",
-    "    model.add(tf.keras.layers.LSTM(128, activation='relu', dropout=0.2, return_sequences=True))\n",
-    "    model.add(tf.keras.layers.MaxPooling1D())\n",
+    "    #model.add(tf.keras.layers.LSTM(16, activation='relu',  dropout=0.2, return_sequences=True))\n",
+    "    #model.add(tf.keras.layers.BatchNormalization())\n",
+    "    #model.add(tf.keras.layers.LSTM(32, activation='relu',  dropout=0.2, return_sequences=True))\n",
+    "    #model.add(tf.keras.layers.BatchNormalization())\n",
+    "    #model.add(tf.keras.layers.LSTM(64, activation='relu',  dropout=0.2, return_sequences=True))\n",
+    "    #model.add(tf.keras.layers.BatchNormalization())\n",
+    "    #model.add(tf.keras.layers.LSTM(128, activation='relu', dropout=0.2, return_sequences=True))\n",
+    "    #model.add(tf.keras.layers.BatchNormalization())\n",
+    "    model.add(tf.keras.layers.LSTM(256, activation='relu', dropout=0.2, return_sequences=True))\n",
     "    model.add(tf.keras.layers.BatchNormalization())\n",
     "    model.add(tf.keras.layers.Flatten())\n",
-    "    model.add(tf.keras.layers.Dense(512, activation='sigmoid'))\n",
+    "    model.add(tf.keras.layers.Dense(256, activation='sigmoid'))\n",
     "    \n",
     "    left_encoded = model(left)\n",
     "    right_encoded = model(right)\n",
     "    \n",
-    "    L1_layer = tf.keras.layers.Lambda(lambda tensors:tf.keras.backend.abs(tensors[0] - tensors[1]))\n",
-    "    \n",
-    "    L1_distance = L1_layer([left_encoded, right_encoded])\n",
+    "    L1_distance = tf.keras.layers.dot([left_encoded,right_encoded], axes=1, normalize=True)\n",
     "    \n",
     "    prediction = tf.keras.layers.Dense(1,activation='sigmoid')(L1_distance)\n",
     "    \n",
@@ -324,16 +354,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = siamese_model((12,300))"
+    "#L1_distance = tf.keras.layers.dot([left_encoded,right_encoded], axes=1, normalize=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = siamese_model((15,300))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +386,7 @@
    "outputs": [],
    "source": [
     "history = model.fit([left_train, rigth_train], label, \n",
-    "          epochs=10, \n",
+    "          epochs=100, \n",
     "          batch_size=32, \n",
     "          validation_data=([left_validation, rigth_validation], label_validation))"
    ]
@@ -357,7 +396,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model.save('siamese_LSTM_1_1.h5')"
+   ]
   },
   {
    "cell_type": "code",
@@ -425,6 +466,53 @@
    "outputs": [],
    "source": [
     "accuracy_score(label_test, y_prob)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import confusion_matrix\n",
+    "cm=confusion_matrix(label_test,y_prob)\n",
+    "print(cm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classes=[0,1]\n",
+    "con_mat = tf.math.confusion_matrix(labels=label_test, predictions=y_prob).numpy()\n",
+    "con_mat_norm = np.around(con_mat.astype('float') / con_mat.sum(axis=1)[:, np.newaxis], decimals=2)\n",
+    "con_mat_df = pd.DataFrame(con_mat_norm,\n",
+    "                     index = classes, \n",
+    "                     columns = classes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns;\n",
+    "figure = plt.figure(figsize=(8, 8))\n",
+    "sns.heatmap(con_mat_df, annot=True,cmap=plt.cm.Blues)\n",
+    "plt.tight_layout()\n",
+    "plt.ylabel('True label')\n",
+    "plt.xlabel('Predicted label')\n",
+    "plt.show()"
    ]
   }
  ],
