--- a/data_preprocessing/clear_data_tables.ipynb
+++ b/data_preprocessing/clear_data_tables.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,29 +58,29 @@
     "    \n",
     "    formattedText = formattedText.rstrip()\n",
     "        \n",
-    "    return formattedText"
+    "    return formattedText.lower()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tables = pd.read_csv('articlesDataset/cleanDataTables', delimiter=',', header=None)\n",
+    "tables = pd.read_csv('../dataset/cleanDataTables', delimiter=',', header=None)\n",
     "formattedTables = tables.iloc[:,:].values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 298793/298793 [04:36<00:00, 1078.69it/s]\n"
+      "100%|██████████| 298793/298793 [04:42<00:00, 1057.18it/s]\n"
      ]
     }
    ],
